--- a/frontend/src/components/page-components/tranz-trakr-page/tranz-trakr-page.module.css
+++ b/frontend/src/components/page-components/tranz-trakr-page/tranz-trakr-page.module.css
@@ -65,6 +65,7 @@
     border: 1px solid #84A98C;
     border-radius: 4px;
     resize: vertical;
+    box-sizing: border-box;
 }
 
 .inputNotes:focus {
